--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ image: "maven"
 stages:
   - build
   - test
+  - deploy
 
 job 1 :
   stage : build
@@ -22,3 +23,9 @@ job 1 :
 job 2 :
   stage : test
   script: mvn verify
+
+job 3 :
+  stage : deploy
+  script: echo "mais miaou"
+
+
