--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,9 @@ job 2 :
 job 3 :
   stage: deploy
   script:
-    - mkdir public
-    - cp -r * target/site/* public
+    - mkdir .public
+    - cp -r * target/site/* .public
+    - mv .public public
     
   artifacts:
     paths:
