--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ job 1 :
     name: "bob2"
     paths:
       - target/*
-      
+
 job 2 :
   stage : test
   script: mvn verify
@@ -27,6 +27,7 @@ job 2 :
 job 3 :
   stage: deploy
   script:
+    - mvn site
     - mkdir .public
     - cp -r * target/site/* .public
     - mv .public public
